--- a/chepter_7/hangman.html
+++ b/chepter_7/hangman.html
@@ -12,7 +12,13 @@
       "программа",
       "макака",
       "прекрасный",
-      "оладушек"
+      "оладушек",
+      "телевизор",
+      "монитор",
+      "ручка",
+      "тапочек",
+      "карандаш",
+      "плита"
     ];
 
     var word = words[Math.floor(Math.random() * words.length)];
